# cadastro-limpo

./: .gitignore  InstallForge Project.ifp
.github/workflows/: windows-build.yml
.trash/: Integração EGA.xlsx  const.go  excel_test.go  go.mod  main.go  messages.go  report.go  run_analysis.go  stats.go  types.go  workbook_scan.go  xmlchars.go  xmlchars_test.go
Cadastro Limpo/: .gitignore  cadastro-limpo.spec  layout.example.json  layout.morador.json  patterns.json  pyproject.toml
Cadastro Limpo/desktop_ui/: __init__.py  __main__.py  build_linux.sh  build_macos.sh  build_windows.ps1  main.py
Cadastro Limpo/desktop_ui/application/: __init__.py  artifact_service.py  config_validation.py  default_paths.py  log_diff_service.py  pipeline_service.py
Cadastro Limpo/desktop_ui/installer/: cadastro-limpo.iss
Cadastro Limpo/desktop_ui/models/: __init__.py  run_artifacts.py
Cadastro Limpo/desktop_ui/tests/: __init__.py  test_config_validation.py  test_default_paths.py  test_log_diff_service.py  test_pipeline_service.py
Cadastro Limpo/desktop_ui/ui/: __init__.py  config_dialog.py  main_window.py
Cadastro Limpo/sanitiser/: COPYRIGHT  README.md  __init__.py  __main__.py  api_cache.py  cli.py  layout.py  test_capitalise.py  test_sanitise_highlights.py  test_updater_logradouro.py  test_updater_trim_all_rows.py  updater.py
Cadastro Limpo/validator/: __init__.py  __main__.py  cli.py  layout.py  patterns.py  validator.py
Cadastro Limpo/validator/tests/: test_validator_core.py
Inventa/: zImpSYD.tlpp
pdfmerge/: README.md  go.mod  main.go
